# singularity

./: .gitignore  CHANGELOG.md  LICENSE  README.md  context-free-grammar.txt  singularity.cabal
bnf/: README.md
core/: ChangeLog.md  core.cabal  package.yaml
singularity/: .scalafmt.conf  build.sbt  kod.txt  working_code.txt  working_code_examples.txt
singularity/examples/: fibb.sing  jvm.sing  nwd.sing  silnia.sing
singularity/src/main/scala/: Main.scala  Rational.scala
singularity/src/main/scala/codegen/: CodeGenerator.scala  CodegenHelpers.scala  Context.scala  ReadCreator.scala  TypeSystemBootstrapper.scala  VarCtr.scala
singularity/src/main/scala/config/: SETTINGS.scala
singularity/src/main/scala/interpreter/: SingularityInterpreter.scala
singularity/src/main/scala/lexer/: ConstantLexer.scala  LexToken.scala  Lexer.scala  LiteralTokenLexer.scala  SchemeLexer.scala
singularity/src/main/scala/model/: NativeOperator.scala  Tokens.scala
singularity/src/main/scala/parser/: ArithmParser.scala  ExprParser.scala  FunApplyParser.scala  IfElseParser.scala  LetRecParser.scala  ParseTrait.scala  SchemeParser.scala  Tokens.scala
singularity/src/main/scala/typeclasses/: GpuTask.scala  Jsn.scala  JsonWriters.scala  ProcessorTask.scala  Rational.scala  Show.scala
singularity/src/test/scala/: RationalTest.scala
singularity/src/test/scala/interpreter/: SingularityInterpreterTest.scala
singularity/src/test/scala/lexer/: ConstantTokenLexerProperty.scala  ConstantTokenLexerTest.scala  Devtalk.scala  LiteralTokenLexerProperty.scala  LiteralTokenLexerTest.scala  (+1 more)
(+23 files in other folders)
