cabal-version:       >=1.10

name:                singularity
version:             0.1.0.0
description: Functional language targetting JVM platform.
license-file:        LICENSE
author:              Jacek Duszenko
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable singularity
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.13 && <4.14
  -- hs-source-dirs:
  default-language:    Haskell2010
